project(boost_coroutine_tcp)

unset(${PROJECT_NAME}_SUB_PROJECT_NAMES)
file(GLOB FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *)
foreach (FILE ${FILES})
    if (IS_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/${FILE})
        if (EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/${FILE}/CMakeLists.txt)
            add_subdirectory(${FILE})
            get_directory_property(SUB_PROJECT_NAME DIRECTORY ${FILE} DEFINITION PROJECT_NAME)
            list(APPEND ${PROJECT_NAME}_SUB_PROJECT_NAMES ${SUB_PROJECT_NAME})
        endif ()
    endif ()
endforeach ()

aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR} ${PROJECT_NAME}_SOURCES)
if (${PROJECT_NAME}_SOURCES)
    add_library(${PROJECT_NAME} ${${PROJECT_NAME}_SOURCES})
    target_link_libraries(${PROJECT_NAME} ${${PROJECT_NAME}_SUB_PROJECT_NAMES})
    target_include_directories(${PROJECT_NAME} PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>)
else ()
    add_library(${PROJECT_NAME} INTERFACE)
    target_link_libraries(${PROJECT_NAME} INTERFACE ${${PROJECT_NAME}_SUB_PROJECT_NAMES})
    target_include_directories(${PROJECT_NAME} INTERFACE $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>)
endif ()

